-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.9, 6.8.3, 6.9.1, 6.10
-
None
-
a4aee6877 (dev), 7d48f2e41 (6.10), ee6602563 (6.9), 2895f582a (tqtc/lts-6.8)
The attached file triggers an assertion inside qmllint. Stacktrace:
ASSERT: "m_scopeType != QQmlSA::ScopeType::QMLScope" in file /home/fabian/qt5/qtdeclarative/src/qmlcompiler/qqmljsscope.cpp, line 75 Program received signal SIGABRT, Aborted. __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>) at ./nptl/pthread_kill.c:44 warning: 44 ./nptl/pthread_kill.c: No such file or directory (gdb) bt #0 __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>) at ./nptl/pthread_kill.c:44 #1 __pthread_kill_internal (signo=6, threadid=<optimized out>) at ./nptl/pthread_kill.c:78 #2 __GI___pthread_kill (threadid=<optimized out>, signo=signo@entry=6) at ./nptl/pthread_kill.c:89 #3 0x00007ffff224527e in __GI_raise (sig=sig@entry=6) at ../sysdeps/posix/raise.c:26 #4 0x00007ffff22288ff in __GI_abort () at ./stdlib/abort.c:79 #5 0x00007ffff3266522 in qAbort () at /home/fabian/qt5/qtbase/src/corelib/global/qassert.cpp:46 #6 0x00007ffff32f471b in qt_maybe_message_fatal<QString&> (msgType=QtFatalMsg, context=..., message=...) at /home/fabian/qt5/qtbase/src/corelib/global/qlogging.cpp:2165 #7 0x00007ffff32e64cd in qt_message(QtMsgType, const QMessageLogContext &, const char *, typedef __va_list_tag __va_list_tag *) (msgType=QtFatalMsg, context=..., msg=0x7ffff2cbdd20 "ASSERT: \"%s\" in file %s, line %d", ap=0x7fffede93420) at /home/fabian/qt5/qtbase/src/corelib/global/qlogging.cpp:412 #8 0x00007ffff32e924c in QMessageLogger::fatal (this=0x7fffedcee5a0, msg=0x7ffff2cbdd20 "ASSERT: \"%s\" in file %s, line %d") at /home/fabian/qt5/qtbase/src/corelib/global/qlogging.cpp:901 #9 0x00007ffff3266618 in qt_assert (assertion=0x7ffff6f50f20 "m_scopeType != QQmlSA::ScopeType::QMLScope", file=0x7ffff6f50ec0 "/home/fabian/qt5/qtdeclarative/src/qmlcompiler/qqmljsscope.cpp", line=75) at /home/fabian/qt5/qtbase/src/corelib/global/qassert.cpp:106 #10 0x00007ffff75ad63c in QQmlJSScope::insertJSIdentifier (this=0x517000076600, name=..., identifier=...) at /home/fabian/qt5/qtdeclarative/src/qmlcompiler/qqmljsscope.cpp:75 #11 0x00007ffff739420b in QQmlJSImportVisitor::visit (this=0x7fffee30ed30, vdl=0x525000000408) at /home/fabian/qt5/qtdeclarative/src/qmlcompiler/qqmljsimportvisitor.cpp:2827 #12 0x00007ffff5ff0f3f in QQmlJS::AST::VariableDeclarationList::accept0 (this=0x525000000408, visitor=0x7fffee30ed30) at /home/fabian/qt5/qtdeclarative/src/qml/parser/qqmljsast.cpp:757 #13 0x00007ffff594d849 in QQmlJS::AST::Node::accept (this=0x525000000408, visitor=0x7fffee30ed30) at /home/fabian/qt5/qtdeclarative/src/qml/parser/qqmljsast_p.h:273 #14 0x00007ffff594d9a7 in QQmlJS::AST::Node::accept (node=0x525000000408, visitor=0x7fffee30ed30) at /home/fabian/qt5/qtdeclarative/src/qml/parser/qqmljsast_p.h:283 #15 0x00007ffff5ff0e65 in QQmlJS::AST::VariableStatement::accept0 (this=0x525000000438, visitor=0x7fffee30ed30) at /home/fabian/qt5/qtdeclarative/src/qml/parser/qqmljsast.cpp:749 #16 0x00007ffff594d849 in QQmlJS::AST::Node::accept (this=0x525000000438, visitor=0x7fffee30ed30) at /home/fabian/qt5/qtdeclarative/src/qml/parser/qqmljsast_p.h:273 #17 0x00007ffff594d9a7 in QQmlJS::AST::Node::accept (node=0x525000000438, visitor=0x7fffee30ed30) at /home/fabian/qt5/qtdeclarative/src/qml/parser/qqmljsast_p.h:283 #18 0x00007ffff5ff5d6b in QQmlJS::AST::UiSourceElement::accept0 (this=0x525000000460, visitor=0x7fffee30ed30) at /home/fabian/qt5/qtdeclarative/src/qml/parser/qqmljsast.cpp:1359 #19 0x00007ffff594d849 in QQmlJS::AST::Node::accept (this=0x525000000460, visitor=0x7fffee30ed30) at /home/fabian/qt5/qtdeclarative/src/qml/parser/qqmljsast_p.h:273 #20 0x00007ffff594d9a7 in QQmlJS::AST::Node::accept (node=0x525000000460, visitor=0x7fffee30ed30) at /home/fabian/qt5/qtdeclarative/src/qml/parser/qqmljsast_p.h:283 #21 0x00007ffff5ff5345 in QQmlJS::AST::UiObjectMemberList::accept0 (this=0x525000000480, visitor=0x7fffee30ed30) at /home/fabian/qt5/qtdeclarative/src/qml/parser/qqmljsast.cpp:1271 #22 0x00007ffff594d849 in QQmlJS::AST::Node::accept (this=0x525000000480, visitor=0x7fffee30ed30) at /home/fabian/qt5/qtdeclarative/src/qml/parser/qqmljsast_p.h:273 #23 0x00007ffff594d9a7 in QQmlJS::AST::Node::accept (node=0x525000000480, visitor=0x7fffee30ed30) at /home/fabian/qt5/qtdeclarative/src/qml/parser/qqmljsast_p.h:283 #24 0x00007ffff5ff4d05 in QQmlJS::AST::UiObjectInitializer::accept0 (this=0x5250000004a0, visitor=0x7fffee30ed30) at /home/fabian/qt5/qtdeclarative/src/qml/parser/qqmljsast.cpp:1219 #25 0x00007ffff594d849 in QQmlJS::AST::Node::accept (this=0x5250000004a0, visitor=0x7fffee30ed30) at /home/fabian/qt5/qtdeclarative/src/qml/parser/qqmljsast_p.h:273 #26 0x00007ffff594d9a7 in QQmlJS::AST::Node::accept (node=0x5250000004a0, visitor=0x7fffee30ed30) at /home/fabian/qt5/qtdeclarative/src/qml/parser/qqmljsast_p.h:283 #27 0x00007ffff5ff4f75 in QQmlJS::AST::UiObjectBinding::accept0 (this=0x5250000004d8, visitor=0x7fffee30ed30) at /home/fabian/qt5/qtdeclarative/src/qml/parser/qqmljsast.cpp:1239 #28 0x00007ffff594d849 in QQmlJS::AST::Node::accept (this=0x5250000004d8, visitor=0x7fffee30ed30) at /home/fabian/qt5/qtdeclarative/src/qml/parser/qqmljsast_p.h:273 #29 0x00007ffff594d9a7 in QQmlJS::AST::Node::accept (node=0x5250000004d8, visitor=0x7fffee30ed30) at /home/fabian/qt5/qtdeclarative/src/qml/parser/qqmljsast_p.h:283 #30 0x00007ffff5ff5345 in QQmlJS::AST::UiObjectMemberList::accept0 (this=0x525000000520, visitor=0x7fffee30ed30) at /home/fabian/qt5/qtdeclarative/src/qml/parser/qqmljsast.cpp:1271 #31 0x00007ffff594d849 in QQmlJS::AST::Node::accept (this=0x525000000520, visitor=0x7fffee30ed30) at /home/fabian/qt5/qtdeclarative/src/qml/parser/qqmljsast_p.h:273 #32 0x00007ffff594d9a7 in QQmlJS::AST::Node::accept (node=0x525000000520, visitor=0x7fffee30ed30) at /home/fabian/qt5/qtdeclarative/src/qml/parser/qqmljsast_p.h:283 #33 0x00007ffff5ff4d05 in QQmlJS::AST::UiObjectInitializer::accept0 (this=0x525000000540, visitor=0x7fffee30ed30) at /home/fabian/qt5/qtdeclarative/src/qml/parser/qqmljsast.cpp:1219 #34 0x00007ffff594d849 in QQmlJS::AST::Node::accept (this=0x525000000540, visitor=0x7fffee30ed30) at /home/fabian/qt5/qtdeclarative/src/qml/parser/qqmljsast_p.h:273 #35 0x00007ffff594d9a7 in QQmlJS::AST::Node::accept (node=0x525000000540, visitor=0x7fffee30ed30) at /home/fabian/qt5/qtdeclarative/src/qml/parser/qqmljsast_p.h:283 #36 0x00007ffff5ff4beb in QQmlJS::AST::UiObjectDefinition::accept0 (this=0x525000000578, visitor=0x7fffee30ed30) at /home/fabian/qt5/qtdeclarative/src/qml/parser/qqmljsast.cpp:1210 #37 0x00007ffff594d849 in QQmlJS::AST::Node::accept (this=0x525000000578, visitor=0x7fffee30ed30) at /home/fabian/qt5/qtdeclarative/src/qml/parser/qqmljsast_p.h:273 #38 0x00007ffff594d9a7 in QQmlJS::AST::Node::accept (node=0x525000000578, visitor=0x7fffee30ed30) at /home/fabian/qt5/qtdeclarative/src/qml/parser/qqmljsast_p.h:283 #39 0x00007ffff5ff5345 in QQmlJS::AST::UiObjectMemberList::accept0 (this=0x5250000005a0, visitor=0x7fffee30ed30) at /home/fabian/qt5/qtdeclarative/src/qml/parser/qqmljsast.cpp:1271 #40 0x00007ffff594d849 in QQmlJS::AST::Node::accept (this=0x5250000005a0, visitor=0x7fffee30ed30) at /home/fabian/qt5/qtdeclarative/src/qml/parser/qqmljsast_p.h:273 #41 0x00007ffff594d9a7 in QQmlJS::AST::Node::accept (node=0x5250000005a0, visitor=0x7fffee30ed30) at /home/fabian/qt5/qtdeclarative/src/qml/parser/qqmljsast_p.h:283 #42 0x00007ffff5ff4945 in QQmlJS::AST::UiProgram::accept0 (this=0x5250000005c0, visitor=0x7fffee30ed30) at /home/fabian/qt5/qtdeclarative/src/qml/parser/qqmljsast.cpp:1186 #43 0x00007ffff72f75f5 in QQmlJS::AST::Node::accept (this=0x5250000005c0, visitor=0x7fffee30ed30) at /home/fabian/qt5/qtdeclarative/src/qml/parser/qqmljsast_p.h:273 #44 0x00007ffff76a0f78 in QQmlJSTypeResolver::init (this=0x7fffee30d690, visitor=0x7fffee30ed30, program=0x5250000005c0) at /home/fabian/qt5/qtdeclarative/src/qmlcompiler/qqmljstyperesolver.cpp:191 #45 0x00007ffff74ad8b3 in QQmlJSLinter::lintFile (this=0x7fffee404110, filename=..., fileContents=0x0, silent=false, json=0x0, qmlImportPaths=..., qmldirFiles=..., resourceFiles=..., categories=...) at /home/fabian/qt5/qtdeclarative/src/qmlcompiler/qqmljslinter.cpp:643 #46 0x00005555555831ef in main (argc=2, argv=0x7fffffffd928) at /home/fabian/qt5/qtdeclarative/tools/qmllint/main.cpp:431