src/qmlcompiler/qqmljsimportvisitor_p.h
@@ -191,6 +191,7 @@ protected:
     QSet<QString> m_usedTypes;
 
     QList<UnfinishedBinding> m_bindings;
+    QSet<std::pair<const QQmlJSScope *, QString>> misplacedJSIdentifiers;
 
     // stores JS functions and Script bindings per scope (only the name). mimics
     // the content of QmlIR::Object::functionsAndExpressions
@@ -402,6 +403,9 @@ private:
                               const QQmlJS::SourceLocation &location);
     void enterRootScope(QQmlJSScope::ScopeType type, const QString &name,
                            const QQmlJS::SourceLocation &location);
+
+    bool safeInsertJSIdentifier(QQmlJSScope::Ptr &scope, const QString &name,
+                                const QQmlJSScope::JavaScriptIdentifier &identifier);
 
     QList<QQmlJS::DiagnosticMessage> importFromHost(
             const QString &path, const QString &prefix, const QQmlJS::SourceLocation &location);
