tests/auto/qml/qmllint/data/jsdeclInQmlScope.qml
@@ -1,0 +1,5 @@
+import QtQml
+QtObject {
+
+        var stuff = [1, 2, 3, 5]
+   }
